fix modal text width on mobile

--- a/src/sass/components/_success.scss
+++ b/src/sass/components/_success.scss
@@ -77,3 +77,9 @@
     align-items: center;
   }
 }
+
+@media (max-width: 780px) {
+  .success-modal .description {
+    width: 100%;
+  }
+}
